--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 :root {
@@ -46,7 +48,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 1158px;
-    text-align: center;
+    padding: 0px 15px;
 }
 
 .logo-web,
@@ -128,7 +130,6 @@ body {
     background-color: var(--dark-color);
     padding-top: 188px;
     padding-bottom: 188px;
-    margin-bottom: 120px;
     text-align: center;
 }
 
@@ -149,10 +150,6 @@ body {
 }
 
 .btn-hero {
-    border-radius: 4px;
-    min-width: 169px;
-    min-height: 56px;
-
     background-color: var(--primary-brand-color);
     color: var(--white-color);
     font-family: 'Roboto';
@@ -160,6 +157,9 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+
+    border-radius: 4px;
+    padding: 16px 32px;
 }
 
 .btn-hero:hover,
@@ -175,23 +175,20 @@ body {
 
 /* MAIN CONTENT*/
 
-
-.section.container {
-    padding-bottom: 120px;
-
-}
-
 .section-title {
     color: var(--dark-color);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    padding-bottom: 72px;
-    margin: 0;
 }
 
 /* Studio / Description of studio */
+
+.main-desc {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 .hide-text {
     display: none;
@@ -204,6 +201,7 @@ body {
 
 .list.desc {
     flex-direction: row;
+    gap: 24px;
 }
 
 
@@ -214,9 +212,7 @@ body {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    padding-bottom: 8px;
-    margin: 0;
-    
+    margin-bottom: 8px;
     text-align: left;
 }
 
@@ -227,39 +223,47 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 0;
-    margin: 0;
-
     text-align: left;
+}
+
+.main-desc .list.item {
+    min-width: 264px;
 }
 
 /* Portfolio / Description of the works of the studio */
 
+.main-prt {
+    padding-bottom: 120px;
+}
+
+.main-prt .section-title {
+    text-align: center;
+    margin-bottom: 72px;
+}
+
 .list.prt {
     display: flex;
     justify-content: center;
-}
-
-.list.prt > .item:not(:last-child) {
-    margin-right: 24px;
+    gap: 24px;
 }
 
 
 /* Contacts / Main team of studio */
 
-.section-team {
+.main-team {
     background-color: var(--light-color);
     padding-bottom: 120px;
 }
 
-.container .section-title.team {
+.main-team .section-title {
     padding-top: 120px;
+    padding-bottom: 72px;
+    text-align: center;
 }
 
 .main-cont {
     display: flex;
-    padding: 0;
-    margin: 0;
+    gap: 24px;
     justify-content: center;
 }
 
@@ -269,28 +273,26 @@ body {
     border-radius: 0px 0px 4px 4px;
 }
 
-.list.team:not(:last-child) {
-    margin-right: 24px;
+.cont-text {
+    padding: 32px 16px;
 }
 
-.team-title {
-    margin-top: 32px;
-    margin-bottom: 8px;
-    text-align: center;
-}
-
+.team-title,
 .team-text {
-    padding-bottom: 32px;
     text-align: center;
 }
-
 
 
 
 /* portfolio.css */
 /* MAIN CONTENT */
 
-.section-title.prt {
+
+.prt-section {
+    padding-bottom: 120px;
+}
+
+.section-title.prt-title {
     display: none;
 }
 
@@ -298,12 +300,8 @@ body {
     margin-top: 96px;
     display: flex;
     justify-content: center;
+    gap: 24px;
 }
-
-.btn-item:not(:last-child) {
-    margin-right: 24px;
-}
-
 
 .btn-filters {
     background-color: var(--light-color);
@@ -335,23 +333,19 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .filter {
     border: 1px solid #E7E9FC;
     width: 360px;
-    margin-right: 24px;
-    margin-bottom: 48px;
 }
 
-.filter:nth-child(3n) {
-    margin-right: 0;
+.prt-block {
+    margin: 32px 0;
+    margin-left: 16px;
 }
-
-.filter:nth-child(n+7) {
-    margin-bottom: 0;
-}
-
 
 .prt-title {
     color: var(--dark-color);
@@ -359,8 +353,6 @@ body {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-
-    margin-top: 32px;
     margin-bottom: 8px;
 }
 
@@ -370,8 +362,6 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
-    padding-bottom: 32px;
 }
 
 /* FOOTER */
@@ -387,8 +377,7 @@ body {
 
 .foot-logo {
     text-align: left;
-    padding: 0;
-    margin: 0;
+    margin-bottom: 16px;
 }
 
 .footer-studio {
